--- a/src/main/webapp/database/views/database.html
+++ b/src/main/webapp/database/views/database.html
@@ -15,14 +15,14 @@
 			<tr><th>Name </th> <td>{{database.dbName}}</td></tr>
 	    	<tr><th>Description</th><td>{{database.dbDescription}}</td></tr>
 	    	<tr><th>Database type</th><td>{{database.databaseType}}</td></tr>
-	    	<tr><th>Created on</th><td>{{database.creationDate}}</td></tr>
+	    	<tr><th>Created on</th><td>{{database.creationDate | date:'longDate'}}</td></tr>
 	    	<tr><th>Data sources</th><td>{{database.dataSources}}</td></tr>
 	    	<tr><th>Data gathering process</th><td>{{database.dataGatheringProcess}}</td></tr>
 		</tbody>
 	</table>
 
 	<a class="button delete" ng-really-message="Are you sure you want to delete this database? Please note that this action cannot be undone: once the database has been deleted, there is no way to restore it. In addition to the main database version, any test or milestone versions you have created will also be deleted at the same time, as will any datasets created for this database." ng-really-click="deleteDatabase()">Delete database</a>              
-	<a class="button" href="#/database/{{logicalDatabaseId}}/edit">Edit database details</a>
+	<a class="button" href="#/project/{{project.projectId}}/{{database.logicalDatabaseId}}/edit">Edit database details</a>
 </div>
 
 
