--- a/src/main/webapp/project/components/projectlist/projectlist.html
+++ b/src/main/webapp/project/components/projectlist/projectlist.html
@@ -6,7 +6,8 @@
 	<div ng-show="projects.$resolved">
         <h3>You are involved in {{projects.length}} projects</h3>
             
-        <a class="button create" href="#/newproject"> Create new project</a>
+        <a ng-show="user.status!='PENDING_EMAIL_VERIFICATION'" class="button create" href="#/newproject"> Create new project</a>
+
     	<p class="panel"></p>
         <div class="panel project"  dir-paginate="project in projects | orderBy:'name' | itemsPerPage: 5  track by project.projectId ">
             <h4>
