prevent delete button navigating

--- a/src/main/webapp/table-view/views/tableView.html
+++ b/src/main/webapp/table-view/views/tableView.html
@@ -69,7 +69,7 @@
 						referenced-label="null"/>
 					</td>
 					<td class="tdScroll" style="min-width:100px; width:100px;">
-						<a href="#" class="button delete" ng-really-message="Are you sure you want to delete this row?" ng-really-click="deleteRow(row)">Delete</a>
+						<button class="button delete" ng-really-message="Are you sure you want to delete this row?" ng-really-click="deleteRow(row)">Delete</button>
 					</td>
 				</tr>
 			</tbody>
