--- a/src/main/webapp/table-view/views/tableView.html
+++ b/src/main/webapp/table-view/views/tableView.html
@@ -78,7 +78,9 @@
 	</div>
 </div>
 <p><div><a class="button" ng-disabled="!dataForm.$dirty" ng-click="saveChangedRows()">Save Changes</a></div></p>
-<p><div><a class="button"  href="#/row/{{project.projectId}}/{{projectDatabase.logicalDatabaseId}}/{{dbId}}/{{instance}}/{{tableName}}/{{primaryKey}}">Add Row</a></div></p>
+
+<p><div><a class="button"  ng-show="queryType=='table'" href="#/row/{{project.projectId}}/{{projectDatabase.logicalDatabaseId}}/{{dbId}}/{{instance}}/{{tableName}}/{{primaryKey}}">Add Row</a></div></p>
+
 <div class=filterArea>Filter: 
 <select ng-model="filterField">
 <option ng-repeat="column in tableData.columnsByIndex">{{column.columnName}}</option>
