removed Oxford references as part of more generic branding

--- a/src/main/webapp/views/signup.html
+++ b/src/main/webapp/views/signup.html
@@ -26,7 +26,7 @@
 			<div class="formItem">
 			    <label for="signupEmail">
 					Email address  <span class="important">*</span>
-					<span class="explanation">This is where notifications relating to your ORDS account will be sent. For members of the University of Oxford, this should normally be your Oxford email address. </span>
+					<span class="explanation">This is where notifications relating to your ORDS account will be sent.</span>
 				</label>
 			    <input ng-model = "user.email" required type="email" id="signupEmail" name="signupEmail">
 				
