--- a/src/main/webapp/table-view/views/tableView.html
+++ b/src/main/webapp/table-view/views/tableView.html
@@ -52,21 +52,25 @@
 			<tbody>
 				<tr ng-repeat="row in tableData.rows | filter:doFilter | orderBy:sortBy:sortReverse" repeat-end="tableLoaded()">
 					<td class="tdScroll" ng-repeat="column in tableData.columnsByIndex">
+
 					<span ng-if="!column.referencedTable">
 						<input type="text" name="input_{{row.cell[primaryKey].value}}_{{column.columnName}}" 
-							ng-if="!checkPrimaryColumn(column)" 
+							ng-if="!checkPrimaryColumn(column) && queryType == 'table'" 
 							ng-model="row.cell[column.columnName].value"
 							ng-change="valueChanged(row.cell[column.columnName])"/>
-						<span ng-if="checkPrimaryColumn(column)">{{row.cell[column.columnName].value}}</span>
+						<span ng-if="checkPrimaryColumn(column) || queryType!=='table'">{{row.cell[column.columnName].value}}</span>
 					</span>
+
 					<big-select ng-if="column.referencedTable" 
 						type="text" 
+						readonly="{{queryType == 'table'}}"
 						reference-key="{{row.cell[primaryKey].value}}"
 						class="selectedDataItem {{column.columnName}} bigdrop"
 						id="selectedDataItemForTableRow_{{row.cell[primaryKey].value}}_{{column.columnName}}"
 						referenced-column="referencedColumn[column.referencedTable]"
 						referenced-table="{{column.referencedTable}}"
 						referenced-label="null"/>
+
 					</td>
 					<td class="tdScroll" style="min-width:100px; width:100px;">
 						<button class="button delete" ng-really-message="Are you sure you want to delete this row?" ng-really-click="deleteRow(row)">Delete</button>
@@ -77,7 +81,7 @@
 		</form>
 	</div>
 </div>
-<p><div><a class="button" ng-disabled="!dataForm.$dirty" ng-click="saveChangedRows()">Save Changes</a></div></p>
+<p><div><a class="button" ng-if="queryType=='table'" ng-disabled="!dataForm.$dirty" ng-click="saveChangedRows()">Save Changes</a></div></p>
 
 <addrow ng-show="queryType=='table'"></addrow>
 
