--- a/src/main/webapp/table-view/views/tableView.html
+++ b/src/main/webapp/table-view/views/tableView.html
@@ -40,7 +40,7 @@
 							</select>
 						</p>
 					</td>
-					<td class="tdFixed" style="width:100px;">Functions</td>
+					<td ng-if="queryType == 'table'" class="tdFixed" style="width:100px;">Functions</td>
 				</tr>
 			</thead>
 			<tbody></tbody>
@@ -72,7 +72,7 @@
 						referenced-label="null"/>
 
 					</td>
-					<td class="tdScroll" style="min-width:100px; width:100px;">
+					<td ng-if="queryType == 'table'" class="tdScroll" style="min-width:100px; width:100px;">
 						<button class="button delete" ng-really-message="Are you sure you want to delete this row?" ng-really-click="deleteRow(row)">Delete</button>
 					</td>
 				</tr>
