restyled datasets as a list and added API popup

--- a/src/main/webapp/style/buttons.css
+++ b/src/main/webapp/style/buttons.css
@@ -11,6 +11,15 @@
     text-decoration: none;
 }
 
+.btn-link {
+	cursor: pointer;
+	text-decoration: underline;
+    font-style: italic;
+    font-size: smaller;
+    display: inline-block;
+    float: right;
+}
+
 
 button,
 a.button,
