--- a/src/main/webapp/database-explorer/views/explorer.html
+++ b/src/main/webapp/database-explorer/views/explorer.html
@@ -16,22 +16,19 @@
 	</div>
 	<div class="panel db-list">
 		<h2>Datasets</h2>
-		<table>
-			<tr>
-				<th>Name</th>
-				<th>Description</th>
-				<th>Authorization</th>
-				<th>Edit Dataset</th>
-				<th>Delete</th>
-			</tr>
-			<tr ng-repeat="dataset in datasetList">
-				<td><a href="#/table/{{project.projectId}}/{{logicalDatabaseId}}/{{physicalDatabaseId}}/{{instance}}/dataset/{{dataset.id}}">{{dataset.viewName}}</a></td>
-				<td>{{dataset.viewDescription}}</td>
-				<td>{{dataset.viewAuthorization}}</td>
-				<td><button class="button" ng-click="editDataset(dataset.id)">Edit</button></td>
-				<td><button class="button" ng-really-message="Are you sure you want to delete this dataset?" ng-really-click="deleteDataset(dataset.id)">Delete</button></td>
-			</tr>
-		</table>
+
+			<div ng-repeat="dataset in datasetList" ng-show="datasetList.$resolved">
+				<div>
+				<h3>{{dataset.viewName}} <em>({{dataset.viewAuthorization}})</em></h3>
+				<p>{{dataset.viewDescription}}</p>
+				</div>
+				<div class="floatRight">
+					<a class="button" href="#/table/{{project.projectId}}/{{logicalDatabaseId}}/{{physicalDatabaseId}}/{{instance}}/dataset/{{dataset.id}}">View</a>
+					<button ng-if="dataset.viewAuthorization=='public'" class="button" ng-click="getAPILink(dataset.id)">API</button>
+					<button class="button" ng-click="editDataset(dataset.id)">Edit</button>
+					<button class="button delete" ng-really-message="Are you sure you want to delete this dataset?" ng-really-click="deleteDataset(dataset.id)">Delete</button>
+				</div>
+			</div>
 	</div>
 </div>
 
