--- a/src/main/webapp/table-view/views/tableView.html
+++ b/src/main/webapp/table-view/views/tableView.html
@@ -82,8 +82,8 @@
 		</form>
 	</div>
 </div>
-<p ng-show="queryType=='SQL'" ><div><a class="button" ng-click="saveAsView()">Save As Dataset</a></div>
-<p ng-show="queryType=='table'" ><div><a class="button" ng-disabled="!dataForm.$dirty" ng-click="saveChangedRows()">Save Changes</a></div></p>
+<div ng-if="queryType=='SQL'"><a class="button" ng-click="saveAsView()">Save As Dataset</a></div>
+<div ng-if="queryType=='table'" ><a class="button" ng-disabled="!dataForm.$dirty" ng-click="saveChangedRows()">Save Changes</a></div>
 
 <addrow ng-show="queryType=='table'"></addrow>
 
