--- a/src/main/webapp/database/views/editdatabase.html
+++ b/src/main/webapp/database/views/editdatabase.html
@@ -60,6 +60,6 @@
                     
 	<div class="form-buttons">
      <a class="button" href="#/project/{{project.projectId}}" name="cancel">Cancel</a>
-	 <button name="submit" class="go-go-go" type="submit" ng-disabled="databaseForm.$invalid">Add</button>
+	 <button name="submit" class="go-go-go" type="submit" ng-disabled="databaseForm.$invalid">Save</button>
 	</div>
 </form>
