--- a/src/main/webapp/table-view/views/tableView.html
+++ b/src/main/webapp/table-view/views/tableView.html
@@ -41,7 +41,7 @@
 							</select>
 						</p>
 					</td>
-					<td ng-if="queryType == 'table'" class="tdFixed" style="width:100px;">Functions</td>
+					<td ng-if="queryType == 'table'" class="tdFixed">Functions</td>
 				</tr>
 			</thead>
 			<tbody></tbody>
@@ -73,7 +73,7 @@
 						referenced-label="null"/>
 
 					</td>
-					<td ng-if="queryType == 'table'" class="tdScroll" style="min-width:100px; width:100px;">
+					<td ng-if="queryType == 'table'" class="tdScroll">
 						<button class="button delete" ng-really-message="Are you sure you want to delete this row?" ng-really-click="deleteRow(row)">Delete</button>
 					</td>
 				</tr>
