--- a/src/main/webapp/table-view/components/addrow/addrow.html
+++ b/src/main/webapp/table-view/components/addrow/addrow.html
@@ -1,5 +1,5 @@
 <div class="contDiv">
-	<div class="headerDiv">
+	<div class="headerDiv scrollfix" fix-on-scroll fixed-div=".scrollfix">
 		<table class="data-table" style="table-layout: fixed; width: 100%">
 			<thead>
 				<tr>
@@ -25,7 +25,7 @@
 			<tbody></tbody>
 		</table>
 	</div>
-		<div class="contDiv" fix-on-scroll fixed-div=".headerDiv" style="overflow-y:scroll">
+		<div class="contDiv scrollfix" fix-on-scroll fixed-div=".scrollfix" style="overflow-y:scroll">
 		<form class="table-data-form" name="addDataForm">
 		<table style="table-layout: fixed; width: 100%">
 			<tbody>
