--- a/src/main/webapp/table-view/views/tableView.html
+++ b/src/main/webapp/table-view/views/tableView.html
@@ -19,7 +19,7 @@
 </tr>
 </table>
 <div class="contDiv">
-	<div class="headerDiv">
+	<div id="data-table-header" class="headerDiv scrollfix" fix-on-scroll fixed-div=".scrollfix">
 		<table class="data-table" style="table-layout: fixed; width: 100%">
 			<thead>
 				<tr>
@@ -48,7 +48,7 @@
 			<tbody></tbody>
 		</table>
 	</div>
-	<div class="bottomDiv" fix-on-scroll fixed-div=".headerDiv">
+	<div class="bottomDiv scrollfix" fix-on-scroll fixed-div=".scrollfix">
 		<form class="table-data-form" name="dataForm">
 		<table style="table-layout: fixed; width: 100%">
 			<tbody>
