fixed issues with ref tables see issue #48. This changes the internal structure for selectedReferences to []{}.

--- a/src/main/webapp/table-view/views/tableView.html
+++ b/src/main/webapp/table-view/views/tableView.html
@@ -69,6 +69,7 @@
 						reference-key="{{row.cell[primaryKey].value}}"
 						class="selectedDataItem {{column.columnName}} bigdrop"
 						id="selectedDataItemForTableRow_{{row.cell[primaryKey].value}}_{{column.columnName}}"
+						local-column="{{column.columnName}}"
 						referenced-column="referencedColumn[column.referencedTable]"
 						referenced-table="{{column.referencedTable}}"
 						referenced-label="null"/>
