--- a/src/main/webapp/table-view/components/addrow/addrow.html
+++ b/src/main/webapp/table-view/components/addrow/addrow.html
@@ -42,6 +42,7 @@
 						reference-key="{{newRowKey}}"
 						class="selectedDataItem {{column.columnName}} bigdrop"
 						id="selectedDataItemForTableRow_{{newRow.cell[newRowKey].value}}_{{column.columnName}}"
+						local-column="{{column.columnName}}"
 						referenced-column="referencedColumn[column.referencedTable]"
 						referenced-table="{{column.referencedTable}}"
 						referenced-label="null"/>
