allow column headings to fill header cells. See issue #45

--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -709,7 +709,7 @@ padding: 0 0.3em ;
 .bottomDiv tbody:nth-child(odd) {background: #aaaaaa}
 
 .colHead {
-	width:138px;
+	/*width:138px;*/
 	height:auto;
 	cursor:pointer;
   word-wrap: break-word;
