Persist VQD state across sessions - see issue #55

--- a/src/main/webapp/database-explorer/components/vqd/vqd.html
+++ b/src/main/webapp/database-explorer/components/vqd/vqd.html
@@ -1,5 +1,5 @@
 <div>
-<p ng-show="!showVQD"><a class="button" ng-click="showVQD = true">Show visual query designer</a></p>
+<p ng-show="!showVQD"><a class="button" ng-click="show()">Show visual query designer</a></p>
 <p ng-show="showVQD"><a class="button" ng-click="showVQD = false">Hide visual query designer</a></p>
 </div>
 
